7-11超商爬蟲找門市

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Membership/Membership.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Membership/Membership.cshtml
@@ -227,6 +227,7 @@
                                                             </button>
                                                             <a href="https://emap.pcsc.com.tw/" class="btn add-address" role="button">前往網站</a>
                                                             <a href="https://emap.pcsc.com.tw/ecmap/default.aspx" class="btn add-address" role="button">前往網站</a>
+                                                            <a href="https://emap.pcsc.com.tw/ecmap/default.aspx?eshopparid=899&eshopid=899&eshoppwd=a00013&tempvar=&sid=1&storecategory=3&showtype=1&url=/secure.rakuten.com.tw/checkout/callback" class="btn add-address" role="button">前往網站</a>
                                                         </div>
                                                     </div>
                                                     <button class="btn-customs btn hvr-hovers " id="memberInfoButton" type="submit">
