修正-[登入功能]遊戲主頁連結購物商城

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -134,7 +134,7 @@
     <button id="registerButton">註冊</button>
 </div>
 
-<button type="submit" id="testDBlogin" @*style="display: none;"*@>測試資料庫登入</button>
+<button type="submit" id="testDBlogin">測試資料庫登入</button>
 
 <!-- End 遊戲畫面 -->
 <!-- 遊戲相關js -->
@@ -162,6 +162,8 @@
 
             ]
         };
+        fetchDataAndProcess();
+        initialize();
     </script>
 
         }
