--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/ProductReview/ProductReview.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/ProductReview/ProductReview.cshtml
@@ -169,9 +169,9 @@
 
 
 @section Scripts{
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+@*     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script> *@
     @* <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />*@
@@ -182,7 +182,7 @@
             language: {
                 url: 'https://cdn.datatables.net/plug-ins/1.13.6/i18n/zh-HANT.json',
             },
-            "responsive": true,
+            responsive: true,
             "searching": true,
             "processing": true,
             "serverSide": false,
